# rules_vite

./: .gitattributes  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  package.json
.bcr/: metadata.template.json
.github/workflows/: publish.yaml  release.yaml  release_prep.sh
docs/: BUILD.bazel  rules.md
e2e/smoke/: BUILD  MODULE.bazel  README.md  WORKSPACE.bazel
examples/reactjs/: BUILD.bazel  vite.config.mjs
examples/reactjs/src/: App.css  App.jsx
examples/reactts/: BUILD.bazel  vite.config.mjs  vitest.config.mts
examples/reactts/src/: App.css  App.test.tsx  App.tsx
examples/vanillajs/: BUILD.bazel
examples/vanillajs/src/: main.js  style.css
examples/vanillats/: BUILD.bazel
examples/vanillats/src/: main.ts  style.css
vite/: BUILD.bazel  README.md  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
vite/private/: BUILD.bazel  resolved_toolchain.bzl  toolchains_repo.bzl
vite/tests/: versions_test.bzl
