# Override http_archive for local testing
local_repository(
    name = "com_xangcastle_rules_vite",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_vite setup #
######################
# Fetches the rules_vite dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@com_xangcastle_rules_vite//vite:repositories.bzl", "rules_vite_dependencies")

rules_vite_dependencies()
