load("//vite:defs.bzl", "vite_binary")

vite_binary(
    name = "dev",
    srcs = glob([
        "src/**",
        "public/**",
        "index.html",
    ]),
    vite_config = "vite.config.mjs",
    deps = [
        "//:node_modules/@vitejs/plugin-react",
        "//:node_modules/react",
        "//:node_modules/react-dom",
    ],
)
