load("//vite:defs.bzl", "vite_binary", "vite_test")

vite_binary(
    name = "dev",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
        "public/**",
        "index.html",
        "tsconfig.json",
    ]),
    vite_config = "vite.config.mjs",
    deps = [
        "//:node_modules/@types/react",
        "//:node_modules/@types/react-dom",
        "//:node_modules/@vitejs/plugin-react",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//packages/mybutton",
    ],
)

vite_test(
    name = "test",
    srcs = glob(
        [
            "src/**/*",
            "public/*",
        ],
    ) + [
        "tsconfig.app.json",
        "tsconfig.json",
        "tsconfig.node.json",
    ],
    vite_config = "vitest.config.mts",
    deps = [
        "//:node_modules/@testing-library/jest-dom",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@types/react",
        "//:node_modules/@types/react-dom",
        "//:node_modules/@vitejs/plugin-react",
        "//:node_modules/react",
        "//:node_modules/react-dom",
        "//packages/mybutton",
    ],
)
